Add support for the named window definition.